k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone1
  labels:
    environment: dev
    project: capstone-cicd-platform
